Changelog for python-gettext

    (name of developer listed in brackets)

python-gettext - 0.4 Released October 13, 2007

    - Added header_only argument to the read method, that allows to only parse
      the header of a file without reading and parsing all the messages.
      [hannosch]

python-gettext - 0.3 Released August 25, 2007

    - Added an explicit read method, which only parses the po file and stores
      it in the messages dict, but does not compile it.
      [hannosch]

python-gettext - 0.2 Released August 23, 2007

    - Bumped version number to accommodate the number in the egg info.
      [hannosch]

python-gettext - 0.1 Released June 19, 2007

    - Initial implementation of a Msgfmt class which supports the generation of
      Gettext mo files including support for the new msgctxt keyword.
      [hannosch]