@@ -2,6 +2,12 @@ Changelog for python-gettext
 
     (name of developer listed in brackets)
 
+python-gettext - 0.5 Released November 1, 2007
+
+    - Optimized file parsing by using more elif clauses and avoiding an insane
+      number of startswith and isinstance calls.
+      [hannosch]
+
 python-gettext - 0.4 Released October 13, 2007
 
     - Added header_only argument to the read method, that allows to only parse
